@@ -16,6 +16,7 @@ import com.querydsl.core.BooleanBuilder;
 import com.querydsl.core.types.Predicate;
 import com.tokyo.supermix.data.dto.FinishProductSampleResponseDto;
 import com.tokyo.supermix.data.entities.FinishProductSample;
+import com.tokyo.supermix.data.entities.IncomingSample;
 import com.tokyo.supermix.data.entities.MixDesign;
 import com.tokyo.supermix.data.entities.QFinishProductSample;
 import com.tokyo.supermix.data.enums.Status;
@@ -89,12 +90,12 @@ public class FinishProductSampleServiceImpl implements FinishProductSampleServic
   }
 
   private Integer maxNumberFromCode(List<FinishProductSample> finishProductSampleList) {
-	  List<Integer> list = new ArrayList<Integer>();
-	  finishProductSampleList.forEach(obj -> {
-	      String code = obj.getCode();
-	      list.add(getNumberFromCode(code.substring(code.lastIndexOf("-"))));
-	    });
-	    return Collections.max(list);
+    List<Integer> list = new ArrayList<Integer>();
+    finishProductSampleList.forEach(obj -> {
+      String code = obj.getCode();
+      list.add(getNumberFromCode(code.substring(code.lastIndexOf("-"))));
+    });
+    return Collections.max(list);
   }
 
   @Transactional(readOnly = true)
@@ -187,11 +188,10 @@ public class FinishProductSampleServiceImpl implements FinishProductSampleServic
   }
 
   @Transactional(readOnly = true)
-  public List<FinishProductSampleResponseDto> searchFinishProductSample(
-      BooleanBuilder booleanBuilder, String finishProductCode, String equipmentName,
-      String mixDesignCode, String plantName, String plantCode, String status, String date,
-      String code, String rawMaterialName, String workOrderNumber, String customer,
-      Pageable pageable, Pagination pagination) {
+  public List<FinishProductSample> searchFinishProductSample(BooleanBuilder booleanBuilder,
+      String finishProductCode, String equipmentName, String mixDesignCode, String plantName,
+      String plantCode, Status status, String date, String code, String rawMaterialName,
+      String workOrderNumber, String customer, Pageable pageable, Pagination pagination) {
     if (finishProductCode != null && !finishProductCode.isEmpty()) {
       booleanBuilder.and(QFinishProductSample.finishProductSample.finishProductCode
           .startsWithIgnoreCase(finishProductCode));
@@ -214,9 +214,8 @@ public class FinishProductSampleServiceImpl implements FinishProductSampleServic
       booleanBuilder.and(QFinishProductSample.finishProductSample.mixDesign.plant.code
           .startsWithIgnoreCase(plantCode));
     }
-    if (status != null && !status.isEmpty()) {
-      booleanBuilder.and(QFinishProductSample.finishProductSample.status.stringValue()
-          .startsWithIgnoreCase(status));
+    if (status != null) {
+      booleanBuilder.and(QFinishProductSample.finishProductSample.status.eq(status));
     }
     if (date != null && !date.isEmpty()) {
       booleanBuilder.and(
@@ -238,11 +237,12 @@ public class FinishProductSampleServiceImpl implements FinishProductSampleServic
       booleanBuilder.and(QFinishProductSample.finishProductSample.project.customer.name
           .stringValue().stringValue().startsWithIgnoreCase(customer));
     }
-    pagination.setTotalRecords(finishProductSampleRepository.countByWorkOrderNumberNull());
-    return mapper.map(
-        finishProductSampleRepository.findAll(booleanBuilder, pageable).toList().stream()
-            .filter(sample -> sample.getWorkOrderNumber() == null).collect(Collectors.toList()),
-        FinishProductSampleResponseDto.class);
+    pagination.setTotalRecords(
+        (long) ((List<FinishProductSample>) finishProductSampleRepository.findAll(booleanBuilder))
+            .stream().filter(sample -> sample.getWorkOrderNumber() == null)
+            .collect(Collectors.toList()).size());
+    return finishProductSampleRepository.findAll(booleanBuilder, pageable).toList().stream()
+        .filter(sample -> sample.getWorkOrderNumber() == null).collect(Collectors.toList());
   }
 
   @Transactional(readOnly = true)
